--- a/PNP_Xcare_APPC3154/Properties/launchSettings.json
+++ b/PNP_Xcare_APPC3154/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Thermostat": {
       "commandName": "Project",
-      "commandLineArgs": "-s connectionString -p HostName=AzureCertificationFree.azure-devices.net;DeviceId=TEST01;SharedAccessKey=2kpJx++KSqpEC9KyAgSQBYL+ERWpDe8R9BYbAakkJ8U="
+      "commandLineArgs": "-s dps -i 0ne000FFA42 -d 61b295c6-a322-449b-9cd3-17725f365f17 -k mCqT8bRV021Dl5HP24i9FWXnXCwzcoea8LKeTx9AxLk= -e global.azure-devices-provisioning.net"
     }
   }
 }
