--- a/PNP_Xcare_IPPC2150P/Properties/launchSettings.json
+++ b/PNP_Xcare_IPPC2150P/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Thermostat": {
       "commandName": "Project",
-      "commandLineArgs": "-s connectionString -p HostName=AzureCertificationFree.azure-devices.net;DeviceId=TEST01;SharedAccessKey=2kpJx++KSqpEC9KyAgSQBYL+ERWpDe8R9BYbAakkJ8U="
+      "commandLineArgs": "-s dps -i 0ne000FFA42 -d c79a4916-0d82-4434-8310-a28e432fa2c0 -k mgRemFdyKcrQLoHPLxCL58SPjTf0l1nXZnKn2DqmdfE= -e global.azure-devices-provisioning.net"
     }
   }
 }
