--- a/PNP_Xcare_NIFE105W/Properties/launchSettings.json
+++ b/PNP_Xcare_NIFE105W/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Thermostat": {
       "commandName": "Project",
-      "commandLineArgs": "-s connectionString -p HostName=AzureCertificationFree.azure-devices.net;DeviceId=TEST01;SharedAccessKey=2kpJx++KSqpEC9KyAgSQBYL+ERWpDe8R9BYbAakkJ8U="
+      "commandLineArgs": "-s dps -i 0ne000FFA42 -d 80115bca-d48a-4b55-8b09-ec6a2d13ce6e -k xYr7sh2qTCZ0kyqHK/n/4uUkQ6N5YlwhwGscCTucRHQ= -e global.azure-devices-provisioning.net"
     }
   }
 }
