--- a/PNP_Xcare_NIFE200P2E/Properties/launchSettings.json
+++ b/PNP_Xcare_NIFE200P2E/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Thermostat": {
       "commandName": "Project",
-      "commandLineArgs": "-s connectionString -p HostName=AzureCertificationFree.azure-devices.net;DeviceId=TEST01;SharedAccessKey=2kpJx++KSqpEC9KyAgSQBYL+ERWpDe8R9BYbAakkJ8U="
+      "commandLineArgs": "-s dps -i 0ne000FFA42 -d 0699d708-f1a8-436b-a3b2-6dca8e05ab13 -k TplGoNokr+S0Vo+d3GMzKB9h5vn9lIvtA6RK+vu4Hi4= -e global.azure-devices-provisioning.net"
     }
   }
 }
