--- a/PNP_Xcare_NIFE300E3/Properties/launchSettings.json
+++ b/PNP_Xcare_NIFE300E3/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Thermostat": {
       "commandName": "Project",
-      "commandLineArgs": "-s connectionString -p HostName=AzureCertificationFree.azure-devices.net;DeviceId=TEST01;SharedAccessKey=2kpJx++KSqpEC9KyAgSQBYL+ERWpDe8R9BYbAakkJ8U="
+      "commandLineArgs": "-s dps -i 0ne000FFA42 -d 80a2550a-0f14-4349-8268-1214fd31e893 -k 8QQOvuGuhaCi+UB7oU74TilmPEEG9GX63TuBDy7krbQ= -e global.azure-devices-provisioning.net"
     }
   }
 }
