--- a/PNP_Xcare_NISE3600P2E/Properties/launchSettings.json
+++ b/PNP_Xcare_NISE3600P2E/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Thermostat": {
       "commandName": "Project",
-      "commandLineArgs": "-s connectionString -p HostName=AzureCertificationFree.azure-devices.net;DeviceId=TEST01;SharedAccessKey=2kpJx++KSqpEC9KyAgSQBYL+ERWpDe8R9BYbAakkJ8U="
+      "commandLineArgs": "-s dps -i 0ne000FFA42 -d 93f0dcdf-a6f4-4064-be35-30a5c541b7a8 -k Y/H5x5/E7SxDF5LO1XrZY+OHkbP0M0UyIm1DkOBCjpI= -e global.azure-devices-provisioning.net"
     }
   }
 }
