--- a/PNP_Xcare_NISE3900P2E/Properties/launchSettings.json
+++ b/PNP_Xcare_NISE3900P2E/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Thermostat": {
       "commandName": "Project",
-      "commandLineArgs": "-s connectionString -p HostName=AzureCertificationFree.azure-devices.net;DeviceId=TEST01;SharedAccessKey=2kpJx++KSqpEC9KyAgSQBYL+ERWpDe8R9BYbAakkJ8U="
+      "commandLineArgs": "-s dps -i 0ne000FFA42 -d 48efc046-6f44-4a23-9780-c07b7631f42b -k pj2UZvLXNZxbUj1DBQ4GExUZ6Muc8N42Z4d1gFqypfM= -e global.azure-devices-provisioning.net"
     }
   }
 }
