--- a/PNP_Xcare_SMB210/Properties/launchSettings.json
+++ b/PNP_Xcare_SMB210/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Thermostat": {
       "commandName": "Project",
-      "commandLineArgs": "-s connectionString -p HostName=AzureCertificationFree.azure-devices.net;DeviceId=TEST01;SharedAccessKey=2kpJx++KSqpEC9KyAgSQBYL+ERWpDe8R9BYbAakkJ8U="
+      "commandLineArgs": "-s dps -i 0ne000FFA42 -d 9e22a3b2-96c2-4907-86e1-7b503f49514a -k MnZBGBxQ8WNlnl9pFSIw8baEm7+BEMK+/FrwJYyjlvs= -e global.azure-devices-provisioning.net"
     }
   }
 }
